chore: .glass-bg for containers that use Popover

--- a/client/src/assets/stylesheets/base.css
+++ b/client/src/assets/stylesheets/base.css
@@ -80,3 +80,10 @@ input:-webkit-autofill:hover{
 .u-select-none{
     user-select: none;
 }
+
+.glass-bg{
+    background: var(--glass-bg);
+    box-shadow: var(--shadow-elevated);
+    border: 1px solid var(--color-border);
+    backdrop-filter: blur(7px);
+}
