feat:  sidebar for navigating between pages within the dashboard instead of a container with 4 static pages.

--- a/client/src/components/atoms/dashboard/DashboardContainer/DashboardContainer.css
+++ b/client/src/components/atoms/dashboard/DashboardContainer/DashboardContainer.css
@@ -2,6 +2,10 @@
     padding: .5rem;
 }
 
+.dashboard-container{
+    padding-top: unset !important;
+}
+
 .search-container {
     border: 1px solid var(--color-border);
     background-color: var(--color-surface-2);
