--- a/client/src/assets/stylesheets/base.css
+++ b/client/src/assets/stylesheets/base.css
@@ -83,3 +83,7 @@ input:-webkit-autofill:hover{
     border: 1px solid var(--color-border);
     backdrop-filter: blur(7px);
 }
+
+.react-flow__panel{
+    display: none;
+}
