--- a/client/src/pages/protected/Dashboard/Dashboard.css
+++ b/client/src/pages/protected/Dashboard/Dashboard.css
@@ -164,8 +164,7 @@ body.jobs-history-expanded {
 }
 
 .jobs-history-viewer-header-enhanced {
-    padding: 1rem 1.25rem;
-    border-bottom: 1px solid var(--color-border-soft);
+    padding: 1rem .8rem .5rem;
 }
 
 .header-content {
