feat: animation to show and hide the task pane for a path and "analysis completed" toast message upon completion of all jobs for a given trajectory

--- a/client/src/pages/protected/Canvas/Canvas.css
+++ b/client/src/pages/protected/Canvas/Canvas.css
@@ -106,6 +106,10 @@
     width: 100%;
 }
 
+.editor-container .jobs-history-viewer-enhanced.expanded{
+    width: 400px;
+}
+
 .file-upload-loader-container p {
     margin-top: 7rem;
     color: #dadada;
@@ -127,7 +131,6 @@
     right: 1rem;
     bottom: 1rem;
     max-height: 40vh;
-    max-width: 350px;
     z-index: 50;
 }
 
